--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -20,7 +20,7 @@ jobs:
         permissions:
             contents: read # for actions/checkout to fetch code
             pull-requests: read # for dorny/paths-filter to read pull requests
-        if: ${{ github.actor != 'dependabot[bot]' && github.ref != 'refs/heads/release-staging' && !contains(github.ref, 'post-release') }}
+        if: github.actor != 'dependabot[bot]' && github.ref != 'refs/heads/release-staging' && !contains(github.ref, 'post-release')
         runs-on: ubuntu-latest
         env:
             BEACHBALL: 1
@@ -34,19 +34,19 @@ jobs:
             #             - 'lib/**/**.!(md)'
             #             - 'extensions/msal-node-extensions/**/**.!(md)'
 
-            # - uses: actions/checkout@v3
-            #   if: ${{ steps.filter.outputs.lib == 'true' }}
-            #   with:
-            #       fetch-depth: 0
+            - uses: actions/checkout@v3
+              # if: ${{ steps.filter.outputs.lib == 'true' }}
+              with:
+                  fetch-depth: 0
 
             - name: Use Node.js
-              if: ${{ steps.filter.outputs.lib == 'true' }}
+              # if: ${{ steps.filter.outputs.lib == 'true' }}
               uses: actions/setup-node@v3
 
             - name: Install beachball
-              if: ${{ steps.filter.outputs.lib == 'true' }}
+              # if: ${{ steps.filter.outputs.lib == 'true' }}
               run: npm ci
 
             - name: Run Beachball Check command
-              if: ${{ steps.filter.outputs.lib == 'true' }}
+              # if: ${{ steps.filter.outputs.lib == 'true' }}
               run: npm run beachball:check
