--- a/.github/workflows/msal-browser-e2e.yml
+++ b/.github/workflows/msal-browser-e2e.yml
@@ -49,19 +49,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
-
-    - name: Get npm cache directory
-      id: npm-cache-dir
-      shell: bash
-      run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
-
-    - uses: actions/cache@v3
-      with:
-        path: ${{ steps.npm-cache-dir.outputs.dir }}
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
+        cache: 'npm'
+        
     - name: Clean Install
       run: npm ci --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=samples --workspace=samples/msal-browser-samples/VanillaJSTestApp2.0
 
