--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -19,14 +19,13 @@ jobs:
         permissions:
             contents: read # for actions/checkout to fetch code
             pull-requests: read # for dorny/paths-filter to read pull requests
-        if: github.actor != 'dependabot[bot]'
+        if: github.actor != 'dependabot[bot]' && github.ref != 'ref/heads/release-staging' && !contains(github.ref, 'post-release')
         runs-on: ubuntu-latest
         env:
             BEACHBALL: 1
         steps:
             - uses: dorny/paths-filter@v2
               id: filter
-              if: ${{ !contains(github.ref, 'post-release') }}
               with:
                   # Will return true if any file is not markdown and any file is in /lib
                   filters: |
