--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies at the root and check that a beachball change file has been committed.
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Beachball Checode .
+name: Beachball Check
 on:
     pull_request:
         branches:
