Test adding expression braces

--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -19,7 +19,7 @@ jobs:
         permissions:
             contents: read # for actions/checkout to fetch code
             pull-requests: read # for dorny/paths-filter to read pull requests
-        if: github.actor != 'dependabot[bot]' && github.ref != 'ref/heads/release-staging' && !contains(github.ref, 'post-release')
+        if: ${{ github.actor != 'dependabot[bot]' && github.ref != 'ref/heads/release-staging' && !contains(github.ref, 'post-release') }}
         runs-on: ubuntu-latest
         env:
             BEACHBALL: 1
