--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -23,12 +23,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "test": "jest",
-        "build:package": "cd ../../../lib/msal-react & npm run build:all"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app"
-        ]
+        "build:package": "cd ../../../ && npm run build:all --workspace=lib/msal-react"
     },
     "browserslist": {
         "production": [
