--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -2,51 +2,50 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Beachball Check
-
 on:
-  pull_request:
-    branches:  
-      - dev
+    pull_request:
+        branches:
+            - dev
 
 concurrency:
-  group: beachball-${{github.ref}}
-  cancel-in-progress: true
+    group: beachball-${{github.ref}}
+    cancel-in-progress: true
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  beachball-check:
-    permissions:
-      contents: read  # for actions/checkout to fetch code
-      pull-requests: read  # for dorny/paths-filter to read pull requests
-    if: github.actor != 'dependabot[bot]'
-    runs-on: ubuntu-latest
-    env:
-      BEACHBALL: 1
-    steps:
-    - uses: dorny/paths-filter@v2
-      id: filter
-      with:
-        # Will return true if any file is not markdown and any file is in /lib
-        filters: |
-          lib:
-            - 'lib/**/**.!(md)'
-            - 'extensions/msal-node-extensions/**/**.!(md)'
+    beachball-check:
+        permissions:
+            contents: read # for actions/checkout to fetch code
+            pull-requests: read # for dorny/paths-filter to read pull requests
+        if: github.actor != 'dependabot[bot]' && github.head_ref != 'release-staging' && !contains(github.head_ref, 'post-release')
+        runs-on: ubuntu-latest
+        env:
+            BEACHBALL: 1
+        steps:
+            - uses: dorny/paths-filter@v2
+              id: filter
+              with:
+                  # Will return true if any file is not markdown and any file is in /lib
+                  filters: |
+                      lib:
+                        - 'lib/**/**.!(md)'
+                        - 'extensions/msal-node-extensions/**/**.!(md)'
 
-    - uses: actions/checkout@v3
-      if: ${{ steps.filter.outputs.lib == 'true' }}
-      with:
-        fetch-depth: 0
+            - uses: actions/checkout@v3
+              if: ${{ steps.filter.outputs.lib == 'true' }}
+              with:
+                  fetch-depth: 0
 
-    - name: Use Node.js
-      if: ${{ steps.filter.outputs.lib == 'true' }}
-      uses: actions/setup-node@v3
+            - name: Use Node.js
+              if: ${{ steps.filter.outputs.lib == 'true' }}
+              uses: actions/setup-node@v3
 
-    - name: Install beachball
-      if: ${{ steps.filter.outputs.lib == 'true' }}
-      run: npm ci
+            - name: Install beachball
+              if: ${{ steps.filter.outputs.lib == 'true' }}
+              run: npm ci
 
-    - name: Run Beachball Check command
-      if: ${{ steps.filter.outputs.lib == 'true' }}
-      run: npm run beachball:check
+            - name: Run Beachball Check command
+              if: ${{ steps.filter.outputs.lib == 'true' }}
+              run: npm run beachball:check
