--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -40,6 +40,7 @@
     },
     "devDependencies": {
         "@types/jest": "^29.5.1",
-        "jest": "^29.5.0"
+        "jest": "^29.5.0",
+        "e2e-test-utils": "file:../../e2eTestUtils"
     }
 }
