--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -15,6 +15,7 @@
         "react-router-dom": "^6.7.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "jest": "^29.5.0",
         "react-scripts": "5.0.1"
     },
