--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -39,8 +39,9 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@types/jest": "^29.5.1",
-        "jest": "^29.5.0",
-        "e2e-test-utils": "file:../../e2eTestUtils"
+        "e2e-test-utils": "file:../../e2eTestUtils",
+        "jest": "^29.5.0"
     }
 }
