--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -46,6 +46,7 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "e2e-test-utils": "file:../../e2eTestUtils"
   }
 }
