--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -49,7 +49,8 @@
         "style-loader": "^3.0.0",
         "ts-loader": "^9.2.2",
         "ts-node": "^10.0.0",
-        "typescript": "~4.5.4"
+        "typescript": "~4.5.4",
+        "e2e-test-utils": "file:../../e2eTestUtils"
     },
     "dependencies": {
         "@azure/msal-node": "^2.0.0-beta.0",
