--- a/samples/msal-node-samples/client-credentials/package.json
+++ b/samples/msal-node-samples/client-credentials/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "jest": "^29.5.0",
     "puppeteer": "^20.1.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "e2e-test-utils": "file:../../e2eTestUtils"
   }
 }
