--- a/samples/msal-node-samples/device-code/package.json
+++ b/samples/msal-node-samples/device-code/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "e2e-test-utils": "file:../../e2eTestUtils"
   }
 }
