--- a/samples/msal-node-samples/on-behalf-of/package.json
+++ b/samples/msal-node-samples/on-behalf-of/package.json
@@ -20,6 +20,7 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "e2e-test-utils": "file:../../e2eTestUtils"
   }
 }
