--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -17,7 +17,8 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "jest": "^29.5.0",
-        "react-scripts": "5.0.1"
+        "react-scripts": "5.0.1",
+        "e2e-test-utils": "file:../../e2eTestUtils"
     },
     "scripts": {
         "start": "react-scripts start",
