--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -9,9 +9,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
-    "core-js": "^3.8.3",
     "react": "^18.0.0",
-    "react-app-polyfill": "^2.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1"
@@ -38,6 +36,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "env-cmd": "^10.1.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "e2e-test-utils": "file:../../e2eTestUtils"
   }
 }
