--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-js-test-app-2.0",
+  "name": "vanilla-js-test-app",
   "version": "1.1.0",
   "license": "MIT",
   "private": true,
@@ -12,20 +12,16 @@
     "generate:certs": "openssl.exe req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 7 -nodes -subj /CN=localhost"
   },
   "dependencies": {
-    "@azure/identity": "^3.1.2",
-    "axios": "^1.4.0",
-    "clear-module": "^4.1.1",
     "express": "^4.12.3",
-    "jose": "^2.0.2",
     "morgan": "^1.5.2",
-    "path": "^0.11.14",
-    "yargs": "^15.3.0"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
     "@types/morgan": "^1.9.0",
     "e2eTestUtils": "file:../../.",
     "jest": "^29.5.0",
+    "jose": "^2.0.2",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   },
