--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.3",
     "@types/morgan": "^1.9.0",
-    "e2eTestUtils": "file:../../.",
+    "e2eTestUtils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
     "jose": "^4.14.4",
     "ts-jest": "^29.1.0",
