--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -37,7 +37,7 @@ jobs:
         cache: 'npm'
 
     - name: Install Dependencies
-      run: npm ci --workspace=lib/** --workspace=extensions/** --include-workspace-root
+      run: npm ci --workspace=${{ inputs.path }}/${{ inputs.lib-name }} --include-workspace-root
 
     - name: Upload npm logs
       uses: actions/upload-artifact@v3
