--- a/.github/workflows/msal-browser-e2e.yml
+++ b/.github/workflows/msal-browser-e2e.yml
@@ -52,7 +52,7 @@ jobs:
         cache: 'npm'
         
     - name: Clean Install
-      run: npm ci --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=e2e-test-utils --workspace=vanilla-js-test-app
+      run: npm ci --workspace=vanilla-js-test-app
 
     - name: Build packages
       working-directory: samples/msal-browser-samples/VanillaJSTestApp2.0
