--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -106,7 +106,7 @@ jobs:
         run: npm ci --workspace=samples/msal-node-samples/${{matrix.sample}} --ignore-engines
 
       - name: Build Package
-        working-directory: samples/msal-node-samples
+        working-directory: samples/msal-node-samples/${{matrix.sample}}
         run: npm run build:package
 
       - name: Install Playwright
