--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "start": "electron-forge start",
         "package": "electron-forge package",
-        "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
+        "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
