--- a/samples/msal-node-samples/silent-flow/package.json
+++ b/samples/msal-node-samples/silent-flow/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]"
+    "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
+    "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node"
   },
   "author": "Microsoft",
   "license": "MIT",
