fix setAttribute errors

--- a/samples/msal-angular-v3-samples/angular16-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/tsconfig.json
@@ -25,6 +25,9 @@
       "dom"
     ],
     "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
       "@azure/msal-angular": [
         "../../../node_modules/@azure/msal-angular/dist"
       ]
