--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/angular.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/angular.json
@@ -34,6 +34,11 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false // Causes setAttribute errors
+                }
+              },
               "budgets": [
                 {
                   "type": "initial",
