--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/tsconfig.json
@@ -23,6 +23,9 @@
       "dom"
     ],
     "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
       "@azure/msal-angular": [
         "../../../node_modules/@azure/msal-angular/dist"
       ]
