--- a/samples/msal-angular-v3-samples/angular16-sample-app/angular.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/angular.json
@@ -31,6 +31,11 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false // Causes setAttribute errors
+                }
+              },
               "budgets": [
                 {
                   "type": "initial",
@@ -117,5 +122,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
