--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,6 @@
         }
     },
     "plugins": [
-        "@typescript-eslint/eslint-plugin-tslint",
         "security",
         "import",
         "header",
@@ -58,7 +57,17 @@
         "@typescript-eslint/prefer-interface": 0,
         "eol-last": 2,
         "eqeqeq": 2,
-        "header/header": [2, "block", [ "", " * Copyright (c) Microsoft Corporation. All rights reserved.", " * Licensed under the MIT License.", " " ], 2],
+        "header/header": [
+            2,
+            "block",
+            [
+                "",
+                " * Copyright (c) Microsoft Corporation. All rights reserved.",
+                " * Licensed under the MIT License.",
+                " "
+            ],
+            2
+        ],
         "import/first": 2,
         "import/no-commonjs": 2,
         "import/no-duplicates": 2,
@@ -66,10 +75,27 @@
         "import/no-unresolved": 2,
         "import/no-unused-modules": 2,
         "import/no-useless-path-segments": 2,
-        "max-len": [0, { "code": 130, "ignoreComments": false, "ignoreRegExpLiterals": true, "ignoreTrailingComments": false, "ignoreUrls": true}],
-        "multiline-comment-style": [2, "starred-block" ],
+        "max-len": [
+            0,
+            {
+                "code": 130,
+                "ignoreComments": false,
+                "ignoreRegExpLiterals": true,
+                "ignoreTrailingComments": false,
+                "ignoreUrls": true
+            }
+        ],
+        "multiline-comment-style": [
+            2,
+            "starred-block"
+        ],
         "no-console": 2,
-        "no-multiple-empty-lines": [2, { "max": 1 }],
+        "no-multiple-empty-lines": [
+            2,
+            {
+                "max": 1
+            }
+        ],
         "no-param-reassign": 2,
         "no-restricted-syntax": [
             1,
@@ -82,8 +108,26 @@
         "prefer-const": 2,
         "react/jsx-closing-bracket-location": 2,
         "react/jsx-closing-tag-location": 2,
-        "react/jsx-curly-spacing": [2, {"when": "never", "attributes": {"allowMultiline": false }, "children": true}],
-        "react/jsx-filename-extension": [2, {"extensions": [".jsx", ".tsx"], "allow": "as-needed"}],
+        "react/jsx-curly-spacing": [
+            2,
+            {
+                "when": "never",
+                "attributes": {
+                    "allowMultiline": false
+                },
+                "children": true
+            }
+        ],
+        "react/jsx-filename-extension": [
+            2,
+            {
+                "extensions": [
+                    ".jsx",
+                    ".tsx"
+                ],
+                "allow": "as-needed"
+            }
+        ],
         "react/jsx-pascal-case": 2,
         "react/jsx-tag-spacing": 2,
         "react/jsx-wrap-multilines": 2,
