--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -77,23 +77,20 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.5.0",
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
     "fake-indexeddb": "^3.1.3",
-    "husky": "^3.0.9",
-    "jest": "^27.0.4",
-    "jsdom": "^20.0.0",
-    "jsdom-global": "^3.0.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "rimraf": "^3.0.0",
     "rollup": "^3.14.0",
     "shx": "^0.3.2",
     "sinon": "^7.5.0",
     "ssri": "^8.0.1",
-    "ts-jest": "^27.0.2",
+    "ts-jest": "^29.1.0",
     "tslib": "^1.10.0",
-    "tslint": "^5.20.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
