--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/msal-browser": "file:../../../lib/msal-browser",
-    "@azure/msal-react": "file:../../../lib/msal-react",
+    "@azure/msal-browser": "^3.0.0-beta.0",
+    "@azure/msal-react": "^2.0.0-beta.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
-    "core-js": "^3.8.3",
-    "react": "file:../../../lib/msal-react/node_modules/react",
-    "react-app-polyfill": "^2.0.0",
-    "react-dom": "file:../../../lib/msal-react/node_modules/react-dom",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1"
   },
@@ -25,12 +23,6 @@
     "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
     "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^18 react-dom@^18"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,10 +33,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version",
-      "ie 11"
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "env-cmd": "^10.1.0",
     "jest": "^29.5.0"
   }
