--- a/samples/msal-node-samples/b2c-user-flows/package.json
+++ b/samples/msal-node-samples/b2c-user-flows/package.json
@@ -14,7 +14,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.5",
