--- a/samples/msal-node-samples/client-credentials/package.json
+++ b/samples/msal-node-samples/client-credentials/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node"
+    "@azure/msal-node": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
