--- a/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
+++ b/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/msal-common": "^10.0.0",
-    "@azure/msal-node": "^1.15.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.18.2",
     "url": "^0.11.0"
   },
