--- a/samples/msal-node-samples/device-code/package.json
+++ b/samples/msal-node-samples/device-code/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.0.1",
+    "@azure/msal-node": "^1.0.0-beta.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
