--- a/samples/msal-node-samples/on-behalf-of/package.json
+++ b/samples/msal-node-samples/on-behalf-of/package.json
@@ -13,7 +13,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
