--- a/samples/msal-node-samples/refresh-token/package.json
+++ b/samples/msal-node-samples/refresh-token/package.json
@@ -12,7 +12,7 @@
     "author": "Microsoft",
     "license": "MIT",
     "dependencies": {
-        "@azure/msal-node": "file:../../../lib/msal-node",
+        "@azure/msal-node": "^2.0.0-beta.0",
         "adal-node": "^0.2.3",
         "cookie-parser": "^1.4.6",
         "express": "^4.17.1",
