--- a/samples/msal-node-samples/username-password/package.json
+++ b/samples/msal-node-samples/username-password/package.json
@@ -13,6 +13,6 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node"
+    "@azure/msal-node": "^2.0.0-beta.0"
   }
 }
