--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
