--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/msal-browser": "^3.0.0-beta.0",
-    "@azure/msal-react": "^2.0.0-beta.0",
+    "@azure/msal-browser": "file:../../../lib/msal-browser",
+    "@azure/msal-react": "file:../../../lib/msal-react",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "file:../../../lib/msal-react/node_modules/react",
+    "react-dom": "file:../../../lib/msal-react/node_modules/react-dom",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1"
   },
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "build:package": "cd ../../../lib/msal-react & npm run build:all",
     "eject": "react-scripts eject",
-    "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
+    "install:local": "npm install ../../../lib/msal-browser ../../../lib/msal-react && npm install ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom",
     "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^18 react-dom@^18"
   },
   "browserslist": {
