--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -37,6 +37,7 @@
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^20.2.5",
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jest": "^29.5.0",
