--- a/samples/msal-angular-v3-samples/angular15-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular15-sample-app/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "~15.1.4",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "karma": "~6.4.0",
