--- a/samples/msal-node-samples/auth-code/package.json
+++ b/samples/msal-node-samples/auth-code/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.2"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "e2e-test-utils": "file:../../e2eTestUtils",
   }
 }
