--- a/samples/msal-node-samples/client-credentials/package.json
+++ b/samples/msal-node-samples/client-credentials/package.json
@@ -18,6 +18,7 @@
     "@azure/msal-node": "file:../../../lib/msal-node"
   },
   "devDependencies": {
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "jest": "^29.5.0",
     "puppeteer": "^20.1.0",
     "ts-jest": "^29.1.0"
