--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "e2e-test-utils": "file:../../e2eTestUtils",
     "env-cmd": "^10.1.0",
     "jest": "^29.5.0"
   }
