--- a/.github/workflows/msal-browser-e2e.yml
+++ b/.github/workflows/msal-browser-e2e.yml
@@ -65,18 +65,9 @@ jobs:
         RUNNING_NODE_CI: 1
       run: npm ci
 
-    - name: Restore node_modules for test tools
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: |
-          samples/node_modules
-          samples/.cache/puppeteer
-        key: ${{ runner.os }}-browser-test-tools-${{ hashFiles('samples/package-lock.json') }}
-
     - name: Install Test Tools
       if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
+      working-directory: samples/e2eTestUtils
       run: npm ci
 
     - name: Restore node_modules for sample
