--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -72,19 +72,9 @@ jobs:
       working-directory: samples/msal-node-samples
       run: npm run build:package
 
-    - name: Restore node_modules for test tools
-      if: matrix.node == '10' || matrix.node == '12'
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: |
-          samples/node_modules
-          samples/.cache/puppeteer
-        key: ${{ runner.os }}-node-test-tools-${{ matrix.node }}-${{ hashFiles('samples/package-lock.json') }}
-
     - name: Install Test Tools
       if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
+      working-directory: samples/e2eTestUtils
       run: npm ci
 
     - name: Restore node_modules for sample
@@ -163,16 +153,9 @@ jobs:
       working-directory: samples/msal-node-samples
       run: npm run build:package
 
-    - name: Restore node_modules for test tools
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: samples/node_modules
-        key: ${{ runner.os }}-node-test-tools-${{ hashFiles('samples/package-lock.json') }}
-
     - name: Install Test Tools
       if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
+      working-directory: samples/e2eTestUtils
       run: npm ci
       env:
         PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
