--- a/.github/workflows/msal-react-e2e.yml
+++ b/.github/workflows/msal-react-e2e.yml
@@ -70,18 +70,9 @@ jobs:
       working-directory: lib/msal-react
       run: npm run build:all
 
-    - name: Restore node_modules for test tools
-      uses: actions/cache@v3
-      id: test-tools-cache
-      with:
-        path: |
-          samples/node_modules
-          samples/.cache/puppeteer
-        key: ${{ runner.os }}-react-e2e-${{ hashFiles('samples/package-lock.json') }}
-
     - name: Install Test Tools
       if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples
+      working-directory: samples/e2eTestUtils
       run: npm ci
 
     - name: Restore node_modules for sample
