update install command

--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: Install Test Tools
       working-directory: samples/e2eTestUtils
-      run: npm ci
+      run: npm install
 
     - name: Install ${{ matrix.sample }}
       working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
