--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Install Test Tools
       if: steps.test-tools-cache.outputs.cache-hit != 'true'
       working-directory: samples/e2eTestUtils
-      run: npm ci
+      run: npm install
 
     - name: Restore node_modules for sample
       uses: actions/cache@v3
