--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/tsconfig.json
@@ -27,7 +27,10 @@
         "./node_modules/@angular/*"
       ]
     },
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "types": [
+      "jest"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
