--- a/samples/msal-angular-v3-samples/angular16-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/tsconfig.json
@@ -28,7 +28,10 @@
       "@angular/*": [
         "./node_modules/@angular/*"
       ]
-    }
+    },
+    "types": [
+      "jest"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
