--- a/samples/msal-angular-v3-samples/angular15-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular15-sample-app/tsconfig.json
@@ -24,9 +24,14 @@
       "ES2022",
       "dom"
     ],
-    "paths": { 
-      "@angular/*": ["./node_modules/@angular/*"]
-    }
+    "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ]
+    },
+    "types": [
+      "jest"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
