--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
+    "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.0",
     "jest": "^29.5.0",
+    "puppeteer": "^20.7.3",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   },
