--- a/samples/msal-node-samples/on-behalf-of/package.json
+++ b/samples/msal-node-samples/on-behalf-of/package.json
@@ -21,7 +21,10 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "e2e-test-utils": "file:../../e2eTestUtils",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "puppeteer": "^20.7.3",
+    "ts-jest": "^29.5.0"
   }
 }
