--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -15,9 +15,12 @@
         "react-router-dom": "^6.7.0"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.0",
         "e2e-test-utils": "file:../../e2eTestUtils",
         "jest": "^29.5.0",
-        "react-scripts": "5.0.1"
+        "puppeteer": "^20.7.3",
+        "react-scripts": "5.0.1",
+        "ts-jest": "^29.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
