--- a/samples/msal-react-samples/react-router-sample/package.json
+++ b/samples/msal-react-samples/react-router-sample/package.json
@@ -45,8 +45,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "e2e-test-utils": "file:../../e2eTestUtils",
     "env-cmd": "^10.1.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "puppeteer": "^20.7.3",
+    "ts-jest": "^29.5.0"
   }
 }
