--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -47,7 +47,10 @@
         ]
     },
     "devDependencies": {
-        "@types/jest": "^29.5.1",
-        "jest": "^29.5.0"
+        "@types/jest": "^29.5.0",
+        "e2e-test-utils": "file:../../e2eTestUtils",
+        "jest": "^29.5.0",
+        "puppeteer": "^20.7.3",
+        "ts-jest": "^29.5.0"
     }
 }
